IGNITE-24453 Update jdk to 11 in docs